# distributed-computing-course

./: .gitignore
lab_1/: Cargo.toml
lab_1/report/: template.tex
lab_1/src/: main.rs
lab_2/: Cargo.toml
lab_2/benches/: criterion_benchmark.rs
lab_2/report/: template.tex
lab_2/src/: lib.rs  main.rs  matop.rs
lab_3/: Cargo.toml
lab_3/benches/: criterion_benchmark.rs
lab_3/report/: template.tex
lab_3/src/: integration.rs  main.rs
lab_4/: Cargo.toml
lab_4/benches/: criterion_benchmark.rs
lab_4/report/: template.tex  udstu.cls
lab_4/src/: lib.rs  lineareq.rs  main.rs
lab_5/: Cargo.toml
lab_5/report/: template.tex
lab_5/src/: constcalc.rs  lib.rs  main.rs
lab_6/: Cargo.toml
lab_6/src/: main.rs
lab_6t/: Cargo.toml
lab_6t/report/: template.tex
lab_6t/src/: main.rs
