[package]
name = "lab_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
nalgebra = { version = "0.32.3", features = ["rand"] }
rayon = "1.8.0"

[[bench]]
name = "criterion_benchmark"
harness = false