[package]
name = "lab_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
ndarray = {version = "0.15.6", features=["rayon"]}
ndarray-rand = "0.14.0"
rayon = "1.8.0"

[[bench]]
name = "criterion_benchmark"
harness = false
